--- a/less/index.less
+++ b/less/index.less
@@ -54,6 +54,204 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	padding: 1% 5%;
 }
 
+html{
+	font-size: 62.5%;
+}
+
+*{
+	max-width:100%;
+}
+
+//Variables
+@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300&display=swap');
+
+@main-font:'Lato', sans-serif;
+@second-font:'Open Sans Condensed', sans-serif;
+@main-color:#5F9EA0;
+//Mixins
+
+.contentflex{
+	margin: 10% 2.5%;
+	width: 45%;
+}
+
+.backgroundscheme1{
+	background-color:#87ECD1;
+	border-radius: 15px 50px;
+}
+
+.backgroundscheme2{
+	background-color:#9D78EC;
+	border-radius: 50px 15px;
+}
+
+/* Resume CSS Starts Here*/
+header{
+	nav{
+	
+	@media(max-width: 500px){
+		font-size: 1.5rem;
+	}
+
+	border-bottom: 1px solid black;
+	display: flex;
+	justify-content: space-evenly;
+	font-size: 3rem;
+	font-family: @main-font;
+	padding-bottom: 2%;
+		a{
+		text-decoration:none;
+		color: @main-color;
+		}
+	}
+}
+
+.top{
+	display:flex;
+	justify-content:space-between;
+	max-width: 800px;
+	margin: 0 auto;
+
+	@media(max-width: 500px){
+		flex-direction:column;
+		width:90%;
+		max-width:60%;
+	}
+}
+.headshot{
+	padding: 5%;
+	margin-top:5%;
+	font-size:3rem;
+	text-align:center;
+	font-family: @main-font;
+	background-color:#1F3D77;
+	border-radius:25px;
+	@media(max-width: 500px){
+		flex-direction:column;
+		width:100%;
+		max-width:100%;
+	}
+
+	h1{
+		border-top: 2px solid black;
+		margin-top: 6%;
+		padding-top: 3%;
+		font-size:3rem;
+	}
+	p{
+		font-size:2rem;
+		text-align:center;
+		font-family: @second-font;
+	}
+		
+		img{
+			display:flex;
+			align-content: center;
+			height: 50vh;
+			border-radius: 25px;
+			@media(max-width: 500px){
+			margin-left:18%;
+			}
+		}
+	}
+
+.intro{
+	display:flex;
+	flex-direction:column;
+	justify-content:space-evenly;
+	width:40%;
+	margin-top: 5%;
+	text-align:center;
+	border: yellow dotted 5px;
+	@media(max-width: 500px){
+		width:90%;
+		margin-left: 5%;
+	}
+	div{
+		h1{
+			font-size:4rem;
+			font-family:@main-font;
+			padding-bottom: 5%;
+		}
+		h3{
+			font-size:3rem;
+			font-family:@main-font;
+			border-top: 1px solid black;
+			padding-top: 15%;
+			padding-bottom: 5%;
+
+		}
+		p{
+			font-size:2rem;
+			font-family:@second-font;
+		}
+
+	}
+}
+	
+.content{
+	display:flex;
+	font-size: 2rem;
+	padding: 5%;
+	@media(max-width: 500px){
+		display:flex;
+		flex-direction:column;
+	}
+	div{
+		.contentflex();
+		@media(max-width: 500px){
+		display:flex;
+		width:90%;
+		}
+	}
+
+	h3{
+		font-size:3rem;
+		text-align:center;
+		font-family:@main-font;
+		padding-bottom: 5%;
+		@media(max-width: 500px){
+			font-size:2.2rem;
+		}
+
+	}
+	ul{
+		padding-left: 10%;
+
+		li{
+			font-family:@second-font;
+			font-size:2rem;
+			line-height:200%;
+			list-style-type:circle;
+		}
+	}
+	.skills{
+		.backgroundscheme1();
+	}
+	.work{
+		.backgroundscheme2();
+	}
+}
+
+.contact{
+	display:flex;
+	flex-direction:column;
+	font-size: 2rem;
+	text-align:center;
+	background-color:#FFE577;
+	h3{
+		font-family:@main-font;
+		font-size:3rem;
+		margin-bottom: 1%;
+	}
+	p{
+		font-family:@second-font;
+		font-size: 2rem;
+		margin-bottom: 1%;
+		line-height: 150%;
+	}
+}
